manifests/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: priskalkulator-ingress
  namespace: priskalkulator-test
spec:
  defaultBackend:
    service:
      name: ding-ip-app-pk
      port:
        number: 8080
  ingressClassName: nginx
  rules:
    - host: test-priskalkulator.ngn.no
      http:
        paths:
          - backend:
              service:
                name: ding-ip-app-pk
                port:
                  number: 8080
            path: /service(/|$)(.*)
            pathType: Prefix
  tls:
    - hosts:
        - test-priskalkulator.ngn.no
      secretName: wildcard-ngn-no
